pre deployment changes